--- a/public/css/pages/login_and_signup.css
+++ b/public/css/pages/login_and_signup.css
@@ -48,6 +48,12 @@ form {
   font-size: 0.9rem;
 }
 
+.left-side h2 {
+  font-weight: 100;
+  font-size: 20px;
+  margin-bottom: 8px;
+}
+
 .left-side input {
   margin-bottom: 10px;
   width: 300px;
@@ -56,7 +62,7 @@ form {
 
 .left-side button {
   align-self: center;
-  width: min-content;
+  width: max-content;
 }
 
 .inputWrapper {
