--- a/public/css/pages/login_and_signup.css
+++ b/public/css/pages/login_and_signup.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0px;
   padding: 0px;
@@ -10,11 +14,14 @@ body {
   font-weight: 300;
 }
 
-button {
+button, .btn {
   background-color: #B5AAAA;
   color: white;
   border: none;
   padding: 5px 10px;
+  font-size: 0.9rem;
+  font-family: Roboto;
+  font-weight: 300;
 }
 
 form, .left-side, .right-side {
@@ -46,6 +53,7 @@ form {
 
 .left-side label {
   font-size: 0.9rem;
+  margin-bottom: 3px;
 }
 
 .left-side h2 {
