--- a/public/css/pages/login_and_signup.css
+++ b/public/css/pages/login_and_signup.css
@@ -40,6 +40,13 @@ form {
   margin-right: 10px;
 }
 
+.left-side #alert {
+  display: none;
+  margin-bottom: 5px;
+  text-align: center;
+  border-radius: 5px;
+}
+
 .left-side label {
   font-size: 0.9rem;
   margin-bottom: 3px;
