--- a/public/css/elements/aside.css
+++ b/public/css/elements/aside.css
@@ -6,6 +6,11 @@ aside {
   justify-content: space-between;
 }
 
+aside a {
+  text-decoration: none;
+  color: black;
+}
+
 aside h1, aside h2 {
   font-weight: 100;
   margin: 0px 0px 0px 5px;
