--- a/public/css/pages/login_and_signup.css
+++ b/public/css/pages/login_and_signup.css
@@ -49,7 +49,7 @@ form {
 
 .left-side label {
   font-size: 0.9rem;
-  margin-bottom: 3px;
+  margin-bottom: 4px;
 }
 
 .left-side h2 {
@@ -121,4 +121,16 @@ label, input, button {
 
 button:hover {
   cursor: pointer;
+}
+
+#forgotPasswordAnchor {
+  text-align: center;
+  margin: 0px;
+  color: black;
+}
+
+#forgotPasswordAnchor a {
+  color: black;
+  text-decoration: none;
+  font-size: 0.8rem;
 }
