--- a/public/css/pages/user/home.css
+++ b/public/css/pages/user/home.css
@@ -11,3 +11,21 @@
   margin-bottom: 0px;
   display: none;
 }
+
+#empty-history-alert {
+  display: none; /* from flex*/
+  flex-direction: column;
+}
+
+#empty-history-alert img, #empty-history-alert h3 {
+  align-self: center;
+}
+
+#empty-history-alert img {
+  width: 60px;
+  height: 60px;
+}
+
+#empty-history-alert h3 {
+  font-weight: 300;
+}
